--- a/Proves/e1.html
+++ b/Proves/e1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>a_3dEstandard-Studio</title>
+    <title>e1_VariablesCadastre-Studio+Distr</title>
     <meta
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
@@ -32,10 +32,11 @@
         'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
       const map = new mapboxgl.Map({
         container: 'map', // container ID
-        style: 'mapbox://styles/mapator/clzqtf0vp00ai01pfbjxcfxs9',
-        center: [2.17404, 41.40337], // starting position [lng, lat]. Note that lat must be set between -90 and 90
-        zoom: 17.5, // starting zoom
-        pitch: 75,
+        style: 'mapbox://styles/mapator/cm10kc1qf017h01pjb8u8du8c/draft',
+        center: [2.14404, 41.37337], // starting position [lng, lat]. Note that lat must be set between -90 and 90
+        zoom: 12, // starting zoom
+        pitch: 45,
+        bearing: -45,
       });
     </script>
   </body>
