--- a/Proves/g.html
+++ b/Proves/g.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>a_3dEstandard-Studio</title>
+    <title>g_3dCadDistRef-Studio</title>
     <meta
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
@@ -29,13 +29,14 @@
     <div id="map"></div>
     <script>
       mapboxgl.accessToken =
-        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
+        "pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ";
       const map = new mapboxgl.Map({
-        container: 'map', // container ID
-        style: 'mapbox://styles/mapator/clzqtf0vp00ai01pfbjxcfxs9',
-        center: [2.17404, 41.40337], // starting position [lng, lat]. Note that lat must be set between -90 and 90
-        zoom: 17.5, // starting zoom
-        pitch: 75,
+        container: "map", // container ID
+        style:"mapbox://styles/mapator/cm0noe49300dk01qodoht6wq2",
+        center: [2.170529, 41.387485], // starting position [lng, lat]. Note that lat must be set between -90 and 90
+        zoom: 14, // starting zoom
+        pitch: 70,
+        bearing: -15,
       });
     </script>
   </body>
