--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <style>
 
     body { font-family: 'Comfortaa', cursive, sans-serif ; font-size: 16px ; }
-    @media screen and (max-width: 500px) { body { font-size: 80% !important; } } 
+    @media screen and (max-width: 500px) { body { font-size: 80% !important; } }
     h4,h5 { color: rgb(255, 255, 255); text-shadow: 2px 2px 4px #000000; font-weight: bold; }
     small { font-size: 60% !important; }
 
@@ -27,12 +27,12 @@
 
     .MapboxGLJS { background-color: rgb(255, 0, 0, 0.4); }
     .storytelling { background-color: rgb(255, 165, 0, 0.4); }
-    .kepler { background-color: rgb(255, 255, 0, 0.4); }     
+    .kepler { background-color: rgb(255, 255, 0, 0.4); }
     .practicas { background-color: rgb(0, 128, 0, 0.4); }
-    .practica { background-color: rgb(0, 0, 255, 0.4); }        
+    .practica { background-color: rgb(0, 0, 255, 0.4); }
     .tesina { background-color: rgba(109, 109, 148, 0.298); }
-    .quarentena { background-color: rgba(255, 0, 0, 0.298); a { border-bottom: #902e4a 0.125em solid; }; a:hover { text-decoration: none;}; }      
-  
+    .quarentena { background-color: rgba(255, 0, 0, 0.298); a { border-bottom: #902e4a 0.125em solid; }; a:hover { text-decoration: none;}; }
+
   </style>
 
 </head>
@@ -50,7 +50,7 @@
       </h4>
     </nav>
     <br>
- 
+
     <div class="alert seccion MapboxGLJS">
       <h4>MapboxGLJS</h4>
       <div class="row">
@@ -67,31 +67,28 @@
             </li>
             <li>
               <a href="mapa3d.html" target="_blank"> Mapa 3D </a>
-                        </li>
-                        <li>
-                            <a href="mapa-rutas3d.html" target="_blank"> Mapa rutes 3D </a>
-                        </li>
-                        <li>
-                            <a href="mapbox-icgc.html" target="_blank"> Mapa ICGC </a>
-                        </li>
-
-                        <li>
-                            <a href="terremotos.html" target="_blank"> Terratrèmols </a>
-                        </li>
-
-                        <li>
-                            <a href="farmacias.html" target="_blank"> Farmàcies </a>
-                        </li>
-                        <li>
-                            <a href="pwa.html" target="_blank"> PWA</a>
-                        </li>
-                        <li>
-                            <a href="poblacion.html" target="_blank"> Població</a>
-                        </li>
-
-                        <li>
-                            <a href="metamapa.html" target="_blank"> Metamapa</a>
-                        </li>                        
+            </li>
+            <li>
+  	      <a href="mapa-rutas3d.html" target="_blank"> Mapa rutes 3D </a>
+            </li>
+	    <li>
+	      <a href="mapbox-icgc.html" target="_blank"> Mapa ICGC </a>
+	    </li>
+	    <li>
+	      <a href="terremotos.html" target="_blank"> Terratrèmols </a>
+	    </li>
+	    <li>
+	      <a href="farmacias.html" target="_blank"> Farmàcies </a>
+	    </li>
+	    <li>
+	      <a href="pwa.html" target="_blank"> PWA</a>
+	    </li>
+	    <li>
+	      <a href="poblacion.html" target="_blank"> Població</a>
+	    </li>
+	    <li>
+	      <a href="metamapa.html" target="_blank"> Metamapa</a>
+	    </li>
           </ul>
         </div>
       </div>
@@ -107,7 +104,7 @@
         </div>
       </div>
     </div>
-  
+
     <div class="alert seccion kepler">
       <h4>KeplerGL</h4>
       <div class="row">
@@ -120,7 +117,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="alert seccion practicas">
     <h4>Pràctica M2B</h4>
     <div class="row">
@@ -130,7 +127,7 @@
             <a href="valencia.html" target="_blank">Visor edificis cadastrals de València capital</a>
           </li>
           <li>
-            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Article de Medium</a>  
+            <a href="https://medium.com/@pa6eal/an-interactive-map-of-valencia-9d5b96b461ea" target="_blank">Article de Medium</a>
           </li>
         </ul>
       </div>
@@ -156,7 +153,7 @@
             <a href="https://riura31.users.earthengine.app/view/visorindexsrmb" target="_blank">Visor en línia d'índexs a partir d'imatges satel·litàries de Sentinel-2</a>
           </li>
           <li>
-            <a href="" target="_blank">(Futur) enllaç al resum de la tesina</a>  
+            <a href="" target="_blank">(Futur) enllaç al resum de la tesina</a>
           </li>
         </ul>
       </div>
@@ -164,66 +161,75 @@
   </div>
 
   <div class="alert seccion quarentena">
-    <h4>BSC trials</h4>
-    <div class="row">
-      <div class="col">
-        <ul>
-          <li>
-            <a href="BuildingsOSMext.html" target="_blank">Extrusió OSM,</a> <a href="https://github.com/pratikyadav/maps/blob/gh-pages/mapbox-3d-buildings/index.html" target="_blank">exemple</a>
-          </li>
-          <li>
-            <a href="new3dbuildings.html" target="_blank">Edificis dissenyats en 3D,</a> <a href="https://github.com/pratikyadav/maps/blob/gh-pages/mapbox-standard/index.html" target="_blank">exemple</a>
-          </li>
-          <li>
-            <a href="storytelling-Barcelona" target="_blank">3D a storytelling?</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+    <h4>Maps & scrollytelling</h4>
     <div class="alert seccion MapboxGLJS">
         <h5>Proves: 3D</h5>
         <ul>
-          <li><h6><a href="https://docs.mapbox.com/studio-manual/guides/publish-your-style/" target="_blank">Style</a> with components (Mapbox Studio)</h6>
+          <li><h5><a href="https://docs.mapbox.com/studio-manual/guides/publish-your-style/" target="_blank">Style</a> with components (Mapbox Studio)</h5>
             <ul>
               <li>
-                <a href="Proves/a.html" target="_blank">a.</a> <a href="https://docs.mapbox.com/help/tutorials/add-3d-buildings-studio/">Add 3D buildings to a Mapbox Studio style
-                </a></a>
+                <a href="Proves/a.html" target="_blank">a.</a> Adding Mapbox "Standard" style with the <a href="https://docs.mapbox.com/mapbox-gl-js/guides/migrate/" target="_blank">new 3D buildings feature</a>
               </li>
               <li>
-                <a href="Proves/b.html" target="_blank">b.</a> Adding Mapbox "Standard" with the <a href="https://docs.mapbox.com/mapbox-gl-js/guides/migrate/" target="_blank">new 3D feature</a> for buildings through a style
+                <a href="Proves/b.html" target="_blank">b.</a> <a href="https://docs.mapbox.com/help/tutorials/add-3d-buildings-studio/">Extrude OSM buildings with height properties</a>
               </li>
             </ul>
           </li>
-          <li><h6>From HTML</h6>
+          <li><h5>From HTML</h5>
             <ul>
               <li>
-                <a href="Proves/c.html" target="_blank">c.</a> Extrusion with OSM height <a href="https://docs.mapbox.com/mapbox-gl-js/example/3d-buildings/" target="_blank">from html</a> instead of styles
+                <a href="Proves/c.html" target="_blank">c.</a> Adding the <a href="https://docs.mapbox.com/mapbox-gl-js/guides/migrate/" target="_blank">new Standard (buildings in 3D) style</a> through the Mapbox GL JS API
               </li>
               <li>
-                <a href="Proves/d.html" target="_blank">d.</a> Adding the <a href="https://docs.mapbox.com/mapbox-gl-js/guides/migrate/" target="_blank">new 3D style</a> in script
+		<a href="Proves/d.html" target="_blank">d.</a> Extrusion with OSM height <a href="https://docs.mapbox.com/mapbox-gl-js/example/3d-buildings/" target="_blank">from html</a> with the Mapbox GL JS API
               </li>
             </ul>
           </li>
-          <li><h6>Custom datasets</h6>
-            <ul>
+          <li><h5>Custom datasets</h5>
+	    <ul><h6>Extrusió a partir de cadastre amb representació per categories</h6>
               <li>
-                <a href="Proves/e.html" target="_blank">e.</a> Afegir estil a partir de <a href="https://docs.mapbox.com/help/tutorials/add-3d-buildings-studio/#option-2-style-an-individual-layer" target="_blank">tileset</a> amb propietats nostres, i cridar-lo
+                <a href="Proves/e.html" target="_blank">e.</a> Afegir estil a partir de <a href="https://docs.mapbox.com/help/tutorials/add-3d-buildings-studio/#option-2-style-an-individual-layer" target="_blank">tileset</a> amb propietats nostres, des d'Studio
+                <ul>
+                  <li>
+                    <a href="Proves/e1.html" target="_blank">e1.</a> Partint d'e, omplir el zoom restant amb la capa de districtes i la mateixa simbolització categòrica
+                  </li>
+                </ul>
               </li>
               <li>
-                <a href="Proves/f.html" target="_blank">f.</a> Afegir des d'HTML a partir de custom tileset</a>
+                <a href="Proves/f.html" target="_blank">f.</a> Utilitzant el tileset de cadastre igual que e, però fent ús de l'API Mapbox GL JS
+              </li>
+	    </ul>
+	    <ul><h6>Combinació entre l'extrusió categoritzada de cadastre i els punts de refugis climàtics</h6>
+	      <li>
+		<a href="Proves/g.html" target=_blank">g.</a> Estil des de Studio a partir de la combinació entre f i els punts/<a href="https://www.youtube.com/watch?v=kzPdpZ1BDG4" target=_blank">marcadors</a> de refugis climàtics
+	      </li>
+	      <li>
+                <a href="Proves/h.html" target=_blank">h.</a> Combinació entre f i els punts/marcador amb l'API Mapbox GL JS. Afegint pop-ups</a>
+              </li> 
+            </ul>
+            <ul><h6>Components</h6>
+              <li>
+		<a href="new3dbuildings.html" target="_blank">Edificis dissenyats en 3D,</a> <a href="https://github.com/pratikyadav/maps/blob/gh-pages/mapbox-standard/index.html" target="_blank">exemple</a>
+              </li>
+              <li>
+                <a href="Proves/x.html" target=_blank">x.</a>
+                <ul>
+                  <li>
+                    <a href="Proves/x1.html" target="_blank">x1.</a>
+                  </li>
+                </ul>
               </li>
             </ul>
-          </li>
-        </ul>
+	</ul>
     </div>
     <div class="alert seccion MapboxGLJS">
       <h5>Proves: ST</h5>
       <ul>
         <li>
+           <a href="storytelling-Barcelona" target="_blank">3D a storytelling?</a>
         </li>
       </ul>
     </div>
   </div>
-
 </body>
 </html>
