--- a/Proves/e.html
+++ b/Proves/e.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Tileset from styles</title>
+    <title>e_VariablesCadastre-Studio</title>
     <meta
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
@@ -29,12 +29,13 @@
     <div id="map"></div>
     <script>
       mapboxgl.accessToken =
-        "pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ";
+        'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
       const map = new mapboxgl.Map({
-        container: "map", // container ID
-        style: "mapbox://styles/mapator/cm00qppwq006901qwbmrscaql",
-        center: [2.17404, 41.40337], // starting position [lng, lat]. Note that lat must be set between -90 and 90
-        zoom: 17, // starting zoom
+        container: 'map', // container ID
+        style: 'mapbox://styles/mapator/cm0ksou66007m01o39g3g1kxs',
+        center: [2.170529, 41.387485], // starting position [lng, lat]. Note that lat must be set between -90 and 90
+        zoom: 14, // starting zoom
+        pitch: 55,
       });
     </script>
   </body>
