--- a/Proves/f.html
+++ b/Proves/f.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Buildings from tileset and html</title>
+    <title>f_VariablesCadastre-GLJS</title>
     <meta
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
@@ -27,57 +27,68 @@
     </style>
     <body>
       <div id="map"></div>
-    </body>
-    <script>
+      <script>
         mapboxgl.accessToken =
-          "pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ";
+          'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
         map = new mapboxgl.Map({
-          container: "map",
-          style: "mapbox://styles/mapbox/dark-v11",
-          center: [2.16859, 41.3954],
-          zoom: 15,
+          container: 'map',
+          style: 'mapbox://styles/mapbox/light-v11',
+          center: [2.170529, 41.387485], // starting position [lng, lat]. Note that lat must be set between -90 and 90
+          zoom: 14, // starting zoom
+          pitch: 55,
           attributionControl: false,
-          pitch: 45,
           hash: true,
         });
-  
-        map.on("load", function () {
-            
-            map.addSource("edificios_source", {
-                type: "vector",
-                url: "mapator.2r8ox3lh", // mapbox: ID Tileset
-            });
-  
-            map.addLayer({
-                "id": "edificios",
-                "type": "fill-extrusion",
-                "source": "edificios_source",
-                "source-layer": "construcciones-5xd1nq", // Nombre Tileset
-                "maxzoom": 21,
-                "minzoom": 15,
-                "filter": [">", "numberOfFl", 0],
-                "paint": {
-                    "fill-extrusion-color": [
-                        "interpolate", ["linear"], ["number", ["get", "numberOfFl"]], //si vinc de geojson canvio 'numberOfF1'
-                        0, "#FFFFFF",
-                        1, "#e6b03d",
-                        3, "#e6b03d",
-                        6, "#3de66d",
-                        9, "#3de6b1",
-                        12, "#22ecf0",
-                        15, "#14b1fd",
-                        20, "#3d73e6",
-                        40, "#123a8f",
-                        80, "#ce2f7e",
-                        100, "transparent"
-                    ],
-                    "fill-extrusion-height": ["*", 2, ["to-number", ["get", "numberOfFl"]]], //to-number, el valor que passo com a altura no sé si és nombre o no. 
-                    "fill-extrusion-opacity": 0.9
-                }
-            }
-            ,"road-label"
-            );
+        map.on('load', function() {
+          map.addSource('edificios_source', {
+            type: 'vector',
+            url: 'mapbox://mapator.4bzarn0j', // mapbox: ID Tileset, Barnai
+          });
+
+          map.addLayer({
+            id: 'edificios',
+            type: 'fill-extrusion',
+            source: 'edificios_source',
+            'source-layer': 'Barnai-a0jwiv', // Nombre Tileset
+            maxzoom: 20,
+            minzoom: 14,
+            //"filter": [">", "numberOfFl", 0],
+            paint: {
+              'fill-extrusion-color': [
+                'match',
+                ['get', 'NOM'],
+                ['Gràcia'],
+                'hsl(0, 60%, 79%)',
+                ['Horta-Guinardó'],
+                'hsl(71, 74%, 67%)',
+                ['Eixample'],
+                'hsl(81, 84%, 22%)',
+                ['Ciutat Vella'],
+                'hsl(180, 75%, 46%)',
+                ['Sant Martí'],
+                'hsl(195, 81%, 35%)',
+                ['Sarrià-Sant Gervasi'],
+                'hsl(209, 71%, 36%)',
+                ['Sants-Montjuïc'],
+                'hsl(283, 74%, 54%)',
+                ['Nou Barris'],
+                'hsl(286, 93%, 22%)',
+                ['Sant Andreu'],
+                'hsl(348, 100%, 59%)',
+                ['Les Corts'],
+                'hsl(44, 100%, 55%)',
+                '#000000',
+              ],
+              'fill-extrusion-height': [
+                '*',
+                2,
+                ['to-number', ['get', 'numberOfFl']],
+              ], //to-number, el valor que passo com a altura no sé si és nombre o no.
+              'fill-extrusion-opacity': 0.9,
+            },
+          });
         });
       </script>
+    </body>
   </head>
 </html>
