f1 acabat, falten punts ref a h

--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
               </li>
               <li>
                 <a href="Proves/f.html" target="_blank">f.</a> Utilitzant el tileset de cadastre igual que e, però fent ús de l'API Mapbox GL JS
+                <ul>
+                  <li>
+                    <a href="Proves/f1.html" target="_blank">f1.</a> Partint d'e, omplir el zoom restant amb la capa de districtes i la mateixa simbolització categòrica
+                  </li>
+                </ul>
               </li>
 	    </ul>
 	    <ul><h6>Combinació entre l'extrusió categoritzada de cadastre i els punts de refugis climàtics</h6>
