--- a/Proves/d.html
+++ b/Proves/d.html
@@ -1,3 +1,5 @@
+<!-- Code adapted from: https://docs.mapbox.com/mapbox-gl-js/example/3d-buildings/ -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,31 +14,19 @@
       rel="stylesheet"
     />
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.js"></script>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-      }
-    </style>
+    <link href='css/style.css' rel='stylesheet' />
   </head>
   <body>
-    <div id="map"></div>
+    <div id="mapa"></div>
     <script>
       mapboxgl.accessToken =
         'pk.eyJ1IjoibWFwYXRvciIsImEiOiJja3dxaXdvZm8wbXI5Mm9xb2JraDJmMjY3In0.cluUTNNRHJwurzUx6dMZDQ';
       const map = new mapboxgl.Map({
-        // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
         style: 'mapbox://styles/mapbox/light-v11',
-        center: [2.17404, 41.40337], // starting position [lng, lat]. Note that lat must be set between -90 and 90
-        zoom: 17.5, // starting zoom
+        center: [2.17404, 41.40337], 
+        zoom: 17.5,
         pitch: 75,
-        container: 'map',
+        container: 'mapa',
       });
 
       map.on('style.load', () => {
