--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
     <h4>Maps & scrollytelling</h4>
     <div class="alert seccion MapboxGLJS">
         <h5>Proves: 3D</h5>
+	<ul>
+	  <li>
+            <a href="Proves/pres_final.html" target="_blank">Presentació 3d.</a> 
+	  </li>
+	</ul>
         <ul>
           <li><h5><a href="https://docs.mapbox.com/studio-manual/guides/publish-your-style/" target="_blank">Style</a> with components (Mapbox Studio)</h5>
             <ul>
@@ -209,7 +214,7 @@
 		<a href="Proves/g.html" target=_blank">g.</a> Estil des de Studio a partir de la combinació entre f i els punts/<a href="https://www.youtube.com/watch?v=kzPdpZ1BDG4" target=_blank">marcadors</a> de refugis climàtics
 	      </li>
 	      <li>
-                <a href="Proves/h.html" target=_blank">h.</a> Combinació entre f i els punts/marcador amb l'API Mapbox GL JS. Afegint pop-ups</a>
+                <a href="Proves/h.html" target=_blank">h.</a> Combinació entre f i els punts/marcador amb l'API Mapbox GL JS. 
               </li> 
             </ul>
             <ul><h6>Components</h6>
